twig-core/src/snapshots/twig_core__tree_renderer__tests__basic_tree.snap
---
source: twig-core/src/tree_renderer.rs
expression: output_str
---
main
└── feature-1 (current)
