twig-core/src/snapshots/twig_core__tree_renderer__tests__tree_with_cross_references.snap
---
source: twig-core/src/tree_renderer.rs
expression: output_str
---
main
└── shared-feature (current)

develop

release
