twig-core/src/snapshots/twig_core__tree_renderer__tests__tree_with_github_pr_only.snap
---
source: twig-core/src/tree_renderer.rs
expression: output_str
---
main
└── feature-pr-only (current)              [PR#123]
