twig-core/src/snapshots/twig_core__tree_renderer__tests__tree_with_max_depth.snap
---
source: twig-core/src/tree_renderer.rs
expression: output_str
---
main
└── level1
    └── level2
