twig-core/src/snapshots/twig_core__tree_renderer__tests__tree_with_multiple_roots.snap
---
source: twig-core/src/tree_renderer.rs
expression: output_str
---
main
└── feature-a

develop
└── feature-b (current)
